--- a/CreateJavaVariableDeclarations/src/createjavavariabledeclarations/GUI.form
+++ b/CreateJavaVariableDeclarations/src/createjavavariabledeclarations/GUI.form
@@ -81,7 +81,11 @@
                                   </Group>
                                   <Component id="typeCombo" min="-2" pref="98" max="-2" attributes="0"/>
                               </Group>
-                              <Component id="howToUseNameCombo" alignment="0" min="-2" pref="199" max="-2" attributes="0"/>
+                              <Group type="102" alignment="0" attributes="0">
+                                  <Component id="howToUseNameCombo" min="-2" pref="199" max="-2" attributes="0"/>
+                                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                                  <Component id="addSemiColonCheck" min="-2" max="-2" attributes="0"/>
+                              </Group>
                           </Group>
                       </Group>
                   </Group>
@@ -113,7 +117,10 @@
                       <Component id="numberT" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="howToUseNameCombo" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="howToUseNameCombo" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="addSemiColonCheck" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Component id="generateB" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="32767" attributes="0"/>
@@ -203,6 +210,11 @@
               </StringArray>
             </Property>
             <Property name="toolTipText" type="java.lang.String" value="This applies if you are generating more than one variable."/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JCheckBox" name="addSemiColonCheck">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="End with ;"/>
           </Properties>
         </Component>
       </SubComponents>
